- desk/desk_rsc.c desk/desk_rsc.h: Fixed crash when changing resolution from
  the old desktop. (VRI)
- doc/bugs.txt: Desk accessories don't open after changing the resolution. (VRI)
- bios/initinfo.c include/portab.h: Added the UNUSED() macro to fix a warning
  when EmuCON is disabled. (VRI)

2011-10-22
- Makefile: Define NODEP as goal accumulator. (VRI)
- Makefile release.mk: Added "make release" to build the release archives. (VRI)
- Makefile: Removed the obsolete "make tgz". (VRI)
- doc/bugs.txt: The "accessories doesn't open after changing the resolution" bug
  only affects PROCALC.ACC. (VRI)
- doc/bugs.txt: Updated the bug list. Contributed by Eero Tamminen. (VRI)

2011-10-25
- doc/announce.txt: Updated for next release. (VRI)

2011-10-26
- doc/authors.txt: Updated for next release. (VRI)

2011-10-27
- doc/bugs.txt: Removed EmuTOS crash on Steem floppies, as non reproduced. (VRI)
- doc/bugs.txt: Added 7UP hangs on exit. (VRI)
- doc/coding.txt: Updated for next release. (VRI)
- doc/country.txt: Updated for next release. (VRI)
- doc/install.txt: Updated for next release. (VRI)
- Makefile: Fixed typo. (VRI)
- doc/nls.txt: Updated for next release. (VRI)
- doc/old_code.txt: Updated for next release. (VRI)
- doc/status.txt: Updated for next release. (VRI)
- doc/todo.txt: Updated for next release. (VRI)
- readme.txt: Updated for next release. (VRI)

2011-10-31
- readme.txt: Cleaned up. (VRI)
- release.mk doc/changelog.txt doc/readme-192k.txt doc/readme-256k.txt
  doc/readme-512k.txt doc/readme-aranym.txt doc/readme-firebee.txt
  doc/readme-floppy.txt doc/readme-ram.txt: Added specific text which will be
  inserted at the top of the readme file of every binary archive. (VRI)
- release.mk: Converted all .txt files in the binary archives into Windows LF
  line endings. (VRI)
- readme.txt: Added compiler information. (VRI)
- po/es.po: Converted all lines to UNIX LF format. (VRI)
- po/*.po: Fixed line numbers. (VRI)