@@ -12,7 +12,7 @@ static const UWORD off_table[], dat_table[];
 const struct font_head fnt_ru_8x16  = {
     1,  /* font_id */
     10,  /* point */
-    "8x16 Russian font",  /*   BYTE name[32]	*/
+    "8x16 Russian font",  /*   BYTE name[32]    */
     0,  /* first_ade */
     255,  /* last_ade */
     13,  /* top */
@@ -29,9 +29,9 @@ const struct font_head fnt_ru_8x16  = {
     0x5555, /* lighten */
     0x5555, /* skew */
     F_STDFORM | F_MONOSPACE | F_DEFAULT,  /* flags */
-    0,			/*   UBYTE *hor_table	*/
-    off_table,		/*   UWORD *off_table	*/
-    dat_table,		/*   UWORD *dat_table	*/
+    0,                  /*   UBYTE *hor_table   */
+    off_table,          /*   UWORD *off_table   */
+    dat_table,          /*   UWORD *dat_table   */
     256,  /* form_width */
     16,  /* form_height */
     0,  /* struct font * next_font */
